--- a/report01.html
+++ b/report01.html
@@ -31,9 +31,9 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを作成した。猫の動きに合わせて線を引き、猫を移動させるプログラムと書くたびに<br>
+        スクラッチを使って線を書くプログラムを作成した。猫の動きに合わせて線を引き、猫を移動させるプログラムでサイエンスアートを作成した。<br>
         2.感想<br>
-        ゲーム感覚でプログラムができて楽しかった。基礎的なプログラムの知識を再確認することができた。<br>
+        スクラッチは独学で使ったことがあるので簡単にできた。<br>
       </div>
     </div>
 
@@ -42,9 +42,9 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        スクラッチを使って簡単なゲームを作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        ゲーム感覚でプログラムができて楽しかった。基礎的なプログラムの知識を再確認することができた<br>        
       </div>
     </div>
 
@@ -54,9 +54,9 @@
         <!-- 自分のホームページのURLに置き替える↓ -->
         <a href="https://pengin777.github.io/website/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        Githubを使って自分のホームページを作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        思っていたよりも簡単にホームページが作れて驚いた。<br>        
       </div>      
     </div>
     
