--- a/report02.html
+++ b/report02.html
@@ -52,9 +52,9 @@
       <h3>2-3 VR（バーチャルリアリティー：Virtual Reality）会議室の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRゴーグルとVRコントローラーを用いてVR会議室の体験をした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        初めてVRを体験したので酔って気持ち悪かった。<br>
       </div>
     </div>
     
