--- a/report02.html
+++ b/report02.html
@@ -44,7 +44,7 @@
         1.内容<br>
         Teacheable Machineを使って機械学習を体験した。AIにグー、チョキ、パーの三つの画像を学習させ、今どのポーズをしているのか判別できるようにした。<br>
         2.感想<br>
-        AIも以外と簡単に使て驚いた。たくさんのデータないとポーズを判別するのは難しいと思った。<br>        
+        AIを以外と簡単に使えて驚いた。たくさんのデータないとポーズを判別するのは難しいと思った。<br>        
       </div>
     </div>
     
