--- a/report02.html
+++ b/report02.html
@@ -42,7 +42,7 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        Teacheable Machineを使って機械学習を体験した。AIにグー、チョキ、パーの三つの画像を学習させ、今どのポーズをしているのか判別できるようにした。<br>
+        AIについて学び、Teacheable Machineを使って機械学習を体験した。<br>AIにグー、チョキ、パーの三つの画像を学習させ、今どのポーズをしているのか判別できるようにした。<br>
         2.感想<br>
         AIを以外と簡単に使えて驚いた。たくさんのデータないとポーズを判別するのは難しいと思った。<br>        
       </div>
