--- a/report01.html
+++ b/report01.html
@@ -42,9 +42,11 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って簡単なゲームを作成した。<br>
+        スクラッチを使って簡単なゲームを作成した。上からスプライトが落ちてきて、<br>
+        動かせるスプライトに当たると消えて点数が加算されるプログラムを作成した。<br>
         2.感想<br>
-        ゲーム感覚でプログラムができて楽しかった。基礎的なプログラムの知識を再確認することができた<br>        
+        ゲーム感覚でプログラムができて楽しかった。<br>
+        基礎的なプログラムの知識を再確認することができた<br>        
       </div>
     </div>
 
