--- a/report03.html
+++ b/report03.html
@@ -27,8 +27,8 @@
     <h2>第3週目</h2>
     <div>
       <h3>3-1 JavaScript体験：VR空間を作る</h3>
-      <img src="vr.png" alt="JavaScript" width="50%" height="50%"><br>
-      <a href="https://yourID.github.io/website/vr.html">VR空間</a><br>                                   
+      <img src="VR.png" alt="JavaScript" width="50%" height="50%"><br>
+      <a href="https://pengin777.github.io/website/vr.html">VR空間</a><br>                                   
       <div>
         1.内容<br>
         ないようないよう<br>
@@ -38,7 +38,7 @@
     </div>
     <div>
       <h3>3-2 JavaScript体験：伝言プログラムを作る</h3>
-      <img src="dengon.png" alt="JavaScript" width="50%" height="50%"><br>
+      <img src="伝言.png" alt="JavaScript" width="50%" height="50%"><br>
       <a href="https://pengin777.github.io/website/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
