--- a/report03.html
+++ b/report03.html
@@ -31,9 +31,9 @@
       <a href="https://pengin777.github.io/website/VR.html">VR空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        javaScriptを用いてVR空間を作成した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        <br>
       </div>
     </div>
     <div>
@@ -42,9 +42,9 @@
       <a href="https://pengin777.github.io/website/伝言.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        <br>
         2.感想<br>
-        かんそうかんそう<br>
+        <br>
       </div>
     </div>
 
@@ -72,7 +72,7 @@
   </div>
                                                              
   <div class=footer>
-    作成日：2023年MM月DD日
+    作成日：2023年02月01日
   </div>
 </body>
 </html>
