--- a/report03.html
+++ b/report03.html
@@ -31,8 +31,10 @@
       <a href="https://pengin777.github.io/website/VR.html">VR空間</a><br>                                   
       <div>
         1.内容<br>
-        javaScriptを用いてVR空間を作成した。<br>
+        javaScriptを用いてVR空間を作成して、<br>
+        自分の思うがままに好きなオブジェクトを作成した。<br>
         2.感想<br>
+        
         <br>
       </div>
     </div>
