--- a/report03.html
+++ b/report03.html
@@ -34,6 +34,7 @@
         javaScriptを用いてVR空間を作成して、<br>
         自分の思うがままに好きなオブジェクトを作成した。<br>
         2.感想<br>
+        座標の感覚をつかむのに時間がかかった。
         
         <br>
       </div>
@@ -45,8 +46,9 @@
       <div>
         1.内容<br>
         javaScriptを用いて伝言プログラムを作成した。<br>
+        文字を入力して、送信すると伝言板に貼り付けられるプログラムを作成した。<br>
         2.感想<br>
-        <br>
+        情報の授業でjavaScriptを触っていたので、スムーズにプログラムを作成することが出来た。<br>
       </div>
     </div>
 
@@ -54,9 +56,10 @@
       <h3>3-3 JavaScriptプログラムの３次元空間の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRゴーグルを用いてVR空間に入った<br>
         2.感想<br>
-        かんそうかんそう<br>
+        javaScriptで作成することができるVR空間に実際に入ることができてすごいと思った。<br>
+        少し酔ってしまった。
       </div>
     </div>
   
