--- a/report03.html
+++ b/report03.html
@@ -31,8 +31,8 @@
       <a href="https://pengin777.github.io/website/VR.html">VR空間</a><br>                                   
       <div>
         1.内容<br>
-        javaScriptを用いてVR空間を作成して、<br>
-        自分の思うがままに好きなオブジェクトを作成した。<br>
+        javaScriptを用いてVR空間を作成して、自分の思うがままに好きなオブジェクトを作成した。
+        立方体と円柱と二つの球体を使って節分が近いので鬼を作りたかったが、黒色に変える方法がわからなかった。<br><br>
         2.感想<br>
         座標の感覚をつかむのに時間がかかった。
         
@@ -45,8 +45,8 @@
       <a href="https://pengin777.github.io/website/伝言.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        javaScriptを用いて伝言プログラムを作成した。<br>
-        文字を入力して、送信すると伝言板に貼り付けられるプログラムを作成した。<br>
+        javaScriptを用いて伝言プログラムを作成した。文字を入力して、送信すると伝言板に貼り付けられるプログラムを作成した。<br>
+        立方体と円柱と二つの球体を使って節分が近いので鬼を作りたかったが、黒色に変える方法がわからなかった。<br>
         2.感想<br>
         情報の授業でjavaScriptを触っていたので、スムーズにプログラムを作成することが出来た。<br>
       </div>
@@ -56,7 +56,7 @@
       <h3>3-3 JavaScriptプログラムの３次元空間の体験</h3>
       <div>
         1.内容<br>
-        VRゴーグルを用いてVR空間に入った<br>
+        VRゴーグルを用いてVR空間に入った。<br>
         2.感想<br>
         javaScriptで作成することができるVR空間に実際に入ることができてすごいと思った。<br>
         少し酔ってしまった。
